--- a/3-SGBD/capitulo_sgbd.tex
+++ b/3-SGBD/capitulo_sgbd.tex
@@ -19,10 +19,19 @@ Dentre as vantagens que os SGBD trouxeram em detrimento ao sistema de arquivos e
     \item{\textbf{Restrições de integridade}}, a fim de garantir que (i) dados não sejam inseridos de forma inconsistente de acordo com o tipo de atributo definido; 
     (ii) as relações entre entidades sejam efetuadas e (iii) restrições de chave sejam mantidas.
     \item{\textbf{Persistência de dados}}, para garantir que os dados serão inseridos e de fato armazenados no modelo.
-    \item{\textbf{Backup}} de dados periodicamente para evitar problemas caso aconteça alguma perda no banco e posterior \textbf{restauração}, para recuperar uma imagem do último backup feito no banco.
+    \item{\textbf{\textit{Backup}}} de dados periodicamente para evitar problemas caso aconteça alguma perda no banco e posterior \textbf{restauração}, para recuperar uma imagem do último backup feito no banco.
 \end{itemize}
 
-SGBD podem ser classificados de acordo com diferentes critérios, 
+Existem várias classes de SGBD, conforme sua estruturação e a forma como manipulam os dados, 
+entre as mais conhecidas estão o modelo relacional, objeto-relacional, orientado a 
+objetos e a abordagem mais recente NoSQL.
+
+O modelo mais conhecido de SGBD é o relacional, ou SGBDR (Sistemas Gerenciadores 
+de Banco de Dados Relacional). Ele foi conceituado por 
+Codd \cite{codd1970relational} em 1970 em um artigo no qual ele expõe as 
+vantagens de um modelo relacional em detrimento de um modelo de redes. 
+
+
 
 \section{SGBD Relacionais}
 
