--- a/Referencias.bib
+++ b/Referencias.bib
@@ -6,6 +6,122 @@
   year={2007}
 }
 
+@article{gilbert2002brewer,
+  title={Brewer's conjecture and the feasibility of consistent, available, partition-tolerant web services},
+  author={Gilbert, Seth and Lynch, Nancy},
+  journal={Acm Sigact News},
+  volume={33},
+  number={2},
+  pages={51--59},
+  year={2002},
+  publisher={ACM}
+}
+@inproceedings{brewer2000towards,
+  title={Towards robust distributed systems},
+  author={Brewer, Eric A},
+  booktitle={PODC},
+  volume={7},
+  year={2000}
+}
+
+@inproceedings{warnars2016datawarehouser,
+  title={Datawarehouser: A Data Warehouse artist who have ability to understand data warehouse schema pictures},
+  author={Warnars, Harco Leslie Hendric Spits and Randriatoamanana, Richard},
+  booktitle={Region 10 Conference (TENCON), 2016 IEEE},
+  pages={2205--2208},
+  year={2016},
+  organization={IEEE}
+}
+
+@article{codd1970relational,
+  title={A relational model of data for large shared data banks},
+  author={Codd, Edgar F},
+  journal={Communications of the ACM},
+  volume={13},
+  number={6},
+  pages={377--387},
+  year={1970},
+  publisher={ACM}
+}
+
+@article{leavitt2010will,
+  title={Will NoSQL databases live up to their promise?},
+  author={Leavitt, Neal},
+  journal={Computer},
+  volume={43},
+  number={2},
+  year={2010},
+  publisher={IEEE}
+}
+
+@article{pritchett2008base,
+  title={Base: An acid alternative},
+  author={Pritchett, Dan},
+  journal={Queue},
+  volume={6},
+  number={3},
+  pages={48--55},
+  year={2008},
+  publisher={ACM}
+}
+
+@article{cattell2011scalable,
+  title={Scalable SQL and NoSQL data stores},
+  author={Cattell, Rick},
+  journal={Acm Sigmod Record},
+  volume={39},
+  number={4},
+  pages={12--27},
+  year={2011},
+  publisher={ACM}
+}
+
+@phdthesis{abadi2008query,
+  title={Query execution in column-oriented database systems},
+  author={Abadi, Daniel J},
+  year={2008},
+  school={Massachusetts Institute of Technology}
+}
+
+@inproceedings{decandia2007dynamo,
+  title={Dynamo: amazon's highly available key-value store},
+  author={DeCandia, Giuseppe and Hastorun, Deniz and Jampani, Madan and Kakulapati, Gunavardhan and Lakshman, Avinash and Pilchin, Alex and Sivasubramanian, Swaminathan and Vosshall, Peter and Vogels, Werner},
+  booktitle={ACM SIGOPS operating systems review},
+  volume={41},
+  number={6},
+  pages={205--220},
+  year={2007},
+  organization={ACM}
+}
+
+@misc{vertabelo2017olap,
+	title = {OLTP vs. OLAP — What’s the Difference?},
+	author = {Aldo Zelen},
+	year = 2017,
+	howpublished = "\url{https://academy.vertabelo.com/blog/oltp-vs-olap-whats-difference/}",
+	note = {Acessado em: 12 de abril de 2018}
+}
+
+@INPROCEEDINGS{han2011nosql, 
+author={Jing Han and Haihong E and Guan Le and Jian Du}, 
+booktitle={2011 6th International Conference on Pervasive Computing and Applications}, 
+title={Survey on NoSQL database}, 
+year={2011}, 
+volume={}, 
+number={}, 
+pages={363-366}, 
+keywords={SQL;cloud computing;query processing;relational databases;CAP theorem;Internet;NoSQL database;SNS;cloud computing;data model;high-concurrency applications;query dynamic user data;relational database;search engines;Blogs;Computational modeling;Databases;Facebook;Reliability;Big Data;NoSQL;column-oriented;database;document;key-value}, 
+doi={10.1109/ICPCA.2011.6106531}, 
+ISSN={}, 
+month={Oct},}
+
+@article{brito2010bancos,
+  title={Bancos de dados NoSQL x SGBDs relacionais: an{\'a}lise comparativa},
+  author={Brito, Ricardo W},
+  journal={Faculdade Farias Brito e Universidade de Fortaleza},
+  year={2010}
+}
+
 @book{wrembel2007data,
   title={Data warehouses and OLAP: concepts, architectures, and solutions},
   author={Wrembel, Robert and Koncilia, Christian},
@@ -284,4 +400,32 @@
   author={Rutishauser, Nico and Noureldin, Amr},
   year={2012},
   publisher={Feb}
+}
+
+@misc{sharding2018educative,
+  title = {Sharding or Data Partitioning},
+	year = 2018,
+	url = {https://www.educative.io/collection/page/5668639101419520/5649050225344512\\/5146118144917504},
+	note = {Acessado em: 20 de maio de 2018}
+
+}
+
+@article{chang2008bigtable,
+  title={Bigtable: A distributed storage system for structured data},
+  author={Chang, Fay and Dean, Jeffrey and Ghemawat, Sanjay and Hsieh, Wilson C and Wallach, Deborah A and Burrows, Mike and Chandra, Tushar and Fikes, Andrew and Gruber, Robert E},
+  journal={ACM Transactions on Computer Systems (TOCS)},
+  volume={26},
+  number={2},
+  pages={4},
+  year={2008},
+  publisher={ACM}
+}
+
+@misc{twitter2010,
+  title = {Twitter growth prompts switch from MySQL to 'NoSQL' database},
+	year = 2010,
+	url = {https://www.computerworld.com/article/2520084/database-administration/twitter-growth-prompts-switch-from-mysql-to--nosql--database.html
+},
+	note = {Acessado em: 20 de maio de 2018}
+
 }
