--- a/iniciais/sumario.tex
+++ b/iniciais/sumario.tex
@@ -19,10 +19,12 @@
 	BD & Banco de Dados\\
 	TPC & \textit{Transaction Processing Performance Council}\\
 	TPC-H & TPC \textit{Benchmark} H\\
+	DSS & Decision Support Systems\\
 	DW & \textit{Data Warehouse}\\
 	OLAP & \textit{On-Line Analytical Processing}\\
 	OLTP & \textit{On-Line Transaction Processing}\\
-	SGBD & Sistema Gerenciador de Banco de Dados\\
+	SGBD & Sistemas Gerenciadores de Banco de Dados\\
+	SGBDR & Sistemas Gerenciadores de Banco de Dados Relacional\\
 	SF & Factor Scale\\
 	PK & \textit{Primary Key}\\
 	FK & \textit{Foreign Key}\\
@@ -33,7 +35,7 @@
 \addcontentsline{toc}{chapter}{Lista de Símbolos}
 \chapter*{Lista de Símbolos}
 \begin{tabular}{ll}
-	$Q_{i}$ & Consulta, onde \mbox{$1 \le i \le 22$}\\
+	$Q_{i}$ & Consulta, onde \mbox{$1 \le i \le 15$}\\
 	\textit{S} & Número de sessões de consulta do Teste de Vazão\\
 	\textit{s} & Sessão, onde \mbox{$1 \le s \le S$}\\
 	$RF_{j}$ & \textit{Refresh Function} -- Função de Atualização\\
