--- a/ModeloTCC.tex
+++ b/ModeloTCC.tex
@@ -31,6 +31,7 @@
 \usepackage{booktabs}
 \usepackage{listings}
 \usepackage{color}
+\usepackage[hyphens]{url}
 \usepackage{textcomp}
 \definecolor{listinggray}{gray}{0.9}
 \definecolor{lbcolor}{rgb}{1,1,1}
