--- a/iniciais/aprova.tex
+++ b/iniciais/aprova.tex
@@ -19,12 +19,12 @@
 \vspace{3cm}
 \fontsize{10}{10}
 Monografia apresentada como requisito parcial para obtenção do Título de Bacharel em Ciência da Computação, pela Universidade Estadual do Oeste do Paraná, Campus de Cascavel, aprovada pela Comissão formada pelos professores:\\
-\vspace{2cm}
+\vspace{1.5cm}
 \begin{flushright}
 \begin{minipage}[10cm] {8.5cm}
 \begin{center}
 \rule{6cm}{0.01mm}\\
-Prof. Dr. Marcio Seiji Oyamada (Orientador)\\
+Prof. Dr. Clodis Boscarioli (Orientador)\\
 Colegiado de Ciência da Computação, UNIOESTE\\
 \vspace{1cm}
 \rule{6cm}{0.01mm}\\
@@ -32,11 +32,15 @@ Gustavo Rezende Krüger (Co-orientador)\\
 Orbit Sistemas\\
 \vspace{1cm}
 \rule{6cm}{0.01mm}\\
-Prof. Dr. Clodis Boscarioli\\
+Prof. Dr. Marcio Seiji Oyamada\\
 Colegiado de Ciência da Computação, UNIOESTE\\
+\vspace{1cm}
+\rule{6cm}{0.01mm}\\
+Bruno Eduardo Soares\\
+Origammi Soluções Digitais\\
 \end{center}
 \end{minipage}
 \end{flushright}
-\vspace{3cm}
+\vspace{2cm}
 Cascavel, \today
 \end{center} 
